<resources>
    <string name="app_name">Lesson3</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="title_activity_fourth">FourthActivity</string>
    <string name="title_activity_fivth">FivthActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title1">Disk and network usage</string>
    <string name="storage_usage">Storage Usage</string>
    <string name="data_usage">Data Usage</string>
    <string name="title2">Automatic media download</string>
    <string name="mobile_data">When using mobile data</string>
    <string name="wifi">When connected on Wi-Fi</string>
    <string name="mobile_data_grey">Photos, Videos (10 MB), Files (1 MB)</string>
    <string name="wifi_grey">Photos, Videos (15 MB), Files (3 MB)</string>
    <string name="roaming">When roaming</string>
    <string name="roaming_gray">Photos</string>
    <string name="reset">Reset Auto-Download Settings</string>
    <string name="customText">Custom Text Views TEXT</string>
    <string name="chenged_text">switch id checked</string>
    <string name="titleNotification1">Notifications for chats</string>
    <string name="private_chats">Private Chats</string>
    <string name="tap_to_change">Tap to change</string>
    <string name="groups">Groups</string>
    <string name="groups_gray">On, 9 exceptions</string>
    <string name="groups_gray_off">Off, 9 exceptions</string>
    <string name="channels">Channels</string>
    <string name="channels_gray">On, 1 exception</string>
    <string name="channels_gray_off">Off, 1 exception</string>
    <string name="title_voice">Voice calls</string>
    <string name="vibrate">Vibrate</string>
    <string name="ringtone">Ringtone</string>
    <string name="defaultt">Default</string>

</resources>
